# TSAR-MVS

./: CMakeLists.txt  README.md  algorithmparameters.h  camera.h  cameraGeometryUtils.h  config.h  displayUtils.h  fileIoUtils.h  gipuma.cu  gipuma.h  globalstate.h  groundTruthUtils.h  helper_cuda.h  linestate.h  main.cpp  main.h  managed.h  mathUtils.h  readmeWindows.txt  vector_operations.h  参数.txt
ORUtils/: MemoryBlock.h
data/: 使用守则.docx
data/TRAIN/: delete.py  delete2.py
gSLICr_Lib/engines/: gSLICr_core_engine.cpp  gSLICr_core_engine.h  gSLICr_seg_engine.cpp  gSLICr_seg_engine.h  gSLICr_seg_engine_GPU.cu  gSLICr_seg_engine_GPU.h  gSLICr_seg_engine_shared.h
scripts/: a.sh  courtyard.sh  delivery_area.sh  electro.sh  facade.sh  meadow.sh  office.sh  pipes.sh  playground.sh  relief.sh  relief_2.sh  terrace.sh  terrains.sh
x/: 1.sh  10.sh  11.sh  12.sh  13.sh  2.sh  3.sh  4.sh  5.sh  6.sh  7.sh  8.sh  9.sh
